--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -186,7 +186,7 @@
                     <Border.Background>
                         <ImageBrush
                             x:Name="borderProfileImage"
-                            ImageSource="/Images/load-photo-bg.png"
+                            ImageSource="{Binding Path=ImagePath}"
                             Stretch="UniformToFill" />
                     </Border.Background>
                 </Border>
