--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -17,10 +17,11 @@
     <Grid DataContext="{StaticResource viewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="70" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="330" />
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Image
-            Grid.RowSpan="2"
+            Grid.RowSpan="3"
             Opacity="1"
             Source="/Images/ui-bg.jpg"
             Stretch="UniformToFill" />
@@ -156,7 +157,19 @@
                     Text="Wrong data. Please try again."
                     Visibility="Hidden" />
             </StackPanel>
-
+        </Border>
+        <Border Grid.Row="2"
+                Width="300"
+                Height="50">
+            <materialDesign:Snackbar x:Name="MDSSnackbarUnsavedChanges"
+                                 Grid.Row="2"
+                                 HorizontalAlignment="Stretch"
+                                 VerticalAlignment="Bottom">
+                <materialDesign:SnackbarMessage x:Name="MDSSnackbarMessage"
+                                            Content=""
+                                            ActionContent=""
+                                            ActionClick="MDSSnackbarMessage_ActionClick"/>
+            </materialDesign:Snackbar>
         </Border>
     </Grid>
 </UserControl>
