--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -18,7 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="70" />
             <RowDefinition Height="330" />
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Image
             Grid.RowSpan="3"
@@ -148,27 +148,22 @@
                             TextDecorations="Underline" />
                     </StackPanel>
                 </Button>
-                <TextBlock
-                    x:Name="wrongDataTextBlock"
-                    Margin="3,10,0,0"
-                    HorizontalAlignment="Center"
-                    FontSize="9"
-                    Foreground="Red"
-                    Text="Wrong data. Please try again."
-                    Visibility="Hidden" />
             </StackPanel>
         </Border>
-        <Border Grid.Row="2"
-                Width="300"
-                Height="50">
-            <materialDesign:Snackbar x:Name="MDSSnackbarUnsavedChanges"
-                                 Grid.Row="2"
-                                 HorizontalAlignment="Stretch"
-                                 VerticalAlignment="Bottom">
-                <materialDesign:SnackbarMessage x:Name="MDSSnackbarMessage"
-                                            Content=""
-                                            ActionContent=""
-                                            ActionClick="MDSSnackbarMessage_ActionClick"/>
+        <Border
+            Grid.Row="2"
+            Width="300"
+            Height="50">
+            <materialDesign:Snackbar
+                x:Name="MDSSnackbarUnsavedChanges"
+                Grid.Row="2"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom">
+                <materialDesign:SnackbarMessage
+                    x:Name="MDSSnackbarMessage"
+                    ActionClick="MDSSnackbarMessage_ActionClick"
+                    ActionContent=""
+                    Content="" />
             </materialDesign:Snackbar>
         </Border>
     </Grid>
