--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -18,7 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="70" />
             <RowDefinition Height="330" />
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Image
             Grid.RowSpan="3"
@@ -241,29 +241,24 @@
                                 TextDecorations="Underline" />
                         </StackPanel>
                     </Button>
-                    <TextBlock
-                        x:Name="wrongDataTextBlock"
-                        Margin="3,10,0,0"
-                        HorizontalAlignment="Center"
-                        FontSize="9"
-                        Foreground="Red"
-                        Text="Fill the gapes."
-                        Visibility="Hidden" />
                 </StackPanel>
             </Grid>
         </Border>
-        <Border Grid.Row="2"
-                Width="300"
-                Height="50">
-            <materialDesign:Snackbar x:Name="MDSSnackbarUnsavedChanges"
-                                 Grid.Row="2"
-                                 HorizontalAlignment="Stretch"
-                                 VerticalAlignment="Bottom">
-                <materialDesign:SnackbarMessage x:Name="MDSSnackbarMessage"
-                                            Content=""
-                                            ActionContent=""
-                                            Background="Blue"
-                                            ActionClick="MDSSnackbarMessage_ActionClick"/>
+        <Border
+            Grid.Row="2"
+            Width="300"
+            Height="50">
+            <materialDesign:Snackbar
+                x:Name="MDSSnackbarUnsavedChanges"
+                Grid.Row="2"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom">
+                <materialDesign:SnackbarMessage
+                    x:Name="MDSSnackbarMessage"
+                    ActionClick="MDSSnackbarMessage_ActionClick"
+                    ActionContent=""
+                    Background="Blue"
+                    Content="" />
             </materialDesign:Snackbar>
         </Border>
     </Grid>
